--- a/Source/CSGO SDK/CSGO SDK.vcxproj
+++ b/Source/CSGO SDK/CSGO SDK.vcxproj
@@ -16,7 +16,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>CSGOSDK</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>CSGOX SDK</ProjectName>
+    <ProjectName>CSGO SDK</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -51,7 +51,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)Dependencies\Include\json\include\;$(SolutionDir)Dependencies\Include\;$(SolutionDir)Dependencies\Include\freetype-windows-binaries\include\;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include\;$(DDK_INC_PATH);$(ProjectDir)Code\public;$(ProjectDir)Code\public\tier0;$(ProjectDir)Code\public\tier1;$(ProjectDir)Code\public\tier2;$(ProjectDir)Code\public\tier3;$(ProjectDir)Code\common;$(ProjectDir)Code\game\shared;$(ProjectDir)Code\game\client;$(ProjectDir)Code\game\server;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Dependencies\Include\json\include\;$(SolutionDir)Dependencies\Include\;$(SolutionDir)Dependencies\Include\freetype-windows-binaries\include\;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include\;$(DDK_INC_PATH);$(SolutionDir)CSGO SDK\Code\public;$(SolutionDir)CSGO SDK\Code\public\tier0;$(SolutionDir)CSGO SDK\Code\public\tier1;$(SolutionDir)CSGO SDK\Code\public\tier2;$(SolutionDir)CSGO SDK\Code\public\tier3;$(SolutionDir)CSGO SDK\Code\common;$(SolutionDir)CSGO SDK\Code\game\shared;$(SolutionDir)CSGO SDK\Code\game\client;$(SolutionDir)CSGO SDK\Code\game\server;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)Dependencies\Lib\;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86\;$(DDK_LIB_PATH);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -86,7 +86,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Code\common\protocol.h" />
+    <ClInclude Include="Code\common\qlimits.h" />
+    <ClInclude Include="Code\common\vgui_surfacelib\ifontsurface.h" />
     <ClInclude Include="Code\common\xbox\xboxstubs.h" />
+    <ClInclude Include="Code\engine\baseclientstate.h" />
+    <ClInclude Include="Code\engine\client.h" />
+    <ClInclude Include="Code\engine\clientframe.h" />
+    <ClInclude Include="Code\engine\clockdriftmgr.h" />
+    <ClInclude Include="Code\engine\cl_bounded_cvars.h" />
+    <ClInclude Include="Code\engine\common.h" />
+    <ClInclude Include="Code\engine\enginesingleuserfilter.h" />
+    <ClInclude Include="Code\engine\event_system.h" />
+    <ClInclude Include="Code\engine\host.h" />
+    <ClInclude Include="Code\engine\precache.h" />
     <ClInclude Include="Code\game\client\cdll_client_int.h" />
     <ClInclude Include="Code\game\client\cdll_util.h" />
     <ClInclude Include="Code\game\client\cliententitylist.h" />
@@ -97,7 +110,12 @@
     <ClInclude Include="Code\game\client\glow_outline_effect.h" />
     <ClInclude Include="Code\game\client\iclassmap.h" />
     <ClInclude Include="Code\game\client\icliententityinternal.h" />
+    <ClInclude Include="Code\game\client\iclientmode.h" />
     <ClInclude Include="Code\game\client\iclientshadowmgr.h" />
+    <ClInclude Include="Code\game\client\iinput.h" />
+    <ClInclude Include="Code\game\client\input.h" />
+    <ClInclude Include="Code\game\client\iviewrender_beams.h" />
+    <ClInclude Include="Code\game\client\kbutton.h" />
     <ClInclude Include="Code\game\client\particledraw.h" />
     <ClInclude Include="Code\game\client\particlemgr.h" />
     <ClInclude Include="Code\game\client\particlesphererenderer.h" />
@@ -108,11 +126,13 @@
     <ClInclude Include="Code\game\client\recvproxy.h" />
     <ClInclude Include="Code\game\client\timedevent.h" />
     <ClInclude Include="Code\game\server\sendproxy.h" />
+    <ClInclude Include="Code\game\shared\beam_flags.h" />
     <ClInclude Include="Code\game\shared\collisionproperty.h" />
     <ClInclude Include="Code\game\shared\cstrike\cs_weapon_parse.h" />
     <ClInclude Include="Code\game\shared\ehandle.h" />
     <ClInclude Include="Code\game\shared\entitylist_base.h" />
     <ClInclude Include="Code\game\shared\groundlink.h" />
+    <ClInclude Include="Code\game\shared\igamemovement.h" />
     <ClInclude Include="Code\game\shared\igamesystem.h" />
     <ClInclude Include="Code\game\shared\imovehelper.h" />
     <ClInclude Include="Code\game\shared\particle_parse.h" />
@@ -124,6 +144,7 @@
     <ClInclude Include="Code\game\shared\shareddefs.h" />
     <ClInclude Include="Code\game\shared\sharedvar.h" />
     <ClInclude Include="Code\game\shared\shared_classnames.h" />
+    <ClInclude Include="Code\game\shared\tempentity.h" />
     <ClInclude Include="Code\game\shared\touchlink.h" />
     <ClInclude Include="Code\game\shared\usercmd.h" />
     <ClInclude Include="Code\game\shared\vscript_shared.h" />
@@ -160,10 +181,14 @@
     <ClInclude Include="Code\public\eiface.h" />
     <ClInclude Include="Code\public\engine\IClientLeafSystem.h" />
     <ClInclude Include="Code\public\engine\ICollideable.h" />
+    <ClInclude Include="Code\public\engine\IEngineSound.h" />
+    <ClInclude Include="Code\public\engine\IEngineTrace.h" />
     <ClInclude Include="Code\public\engine\iserverplugin.h" />
     <ClInclude Include="Code\public\engine\ishadowmgr.h" />
     <ClInclude Include="Code\public\engine\ivmodelinfo.h" />
     <ClInclude Include="Code\public\engine\ivmodelrender.h" />
+    <ClInclude Include="Code\public\engine\SndInfo.h" />
+    <ClInclude Include="Code\public\event_flags.h" />
     <ClInclude Include="Code\public\filesystem.h" />
     <ClInclude Include="Code\public\filesystem_passthru.h" />
     <ClInclude Include="Code\public\gametrace.h" />
@@ -176,11 +201,16 @@
     <ClInclude Include="Code\public\iclientthinkable.h" />
     <ClInclude Include="Code\public\iclientunknown.h" />
     <ClInclude Include="Code\public\icvar.h" />
+    <ClInclude Include="Code\public\igameevents.h" />
     <ClInclude Include="Code\public\ihandleentity.h" />
     <ClInclude Include="Code\public\inetmsghandler.h" />
+    <ClInclude Include="Code\public\inputsystem\AnalogCode.h" />
     <ClInclude Include="Code\public\inputsystem\ButtonCode.h" />
+    <ClInclude Include="Code\public\inputsystem\iinputsystem.h" />
     <ClInclude Include="Code\public\inputsystem\InputEnums.h" />
     <ClInclude Include="Code\public\interfaces\interfaces.h" />
+    <ClInclude Include="Code\public\iprediction.h" />
+    <ClInclude Include="Code\public\irecipientfilter.h" />
     <ClInclude Include="Code\public\isaverestore.h" />
     <ClInclude Include="Code\public\iserverentity.h" />
     <ClInclude Include="Code\public\iservernetworkable.h" />
@@ -190,6 +220,7 @@
     <ClInclude Include="Code\public\istudiorender.h" />
     <ClInclude Include="Code\public\ivrenderview.h" />
     <ClInclude Include="Code\public\localflexcontroller.h" />
+    <ClInclude Include="Code\public\localize\ilocalize.h" />
     <ClInclude Include="Code\public\materialsystem\deformations.h" />
     <ClInclude Include="Code\public\materialsystem\IColorCorrection.h" />
     <ClInclude Include="Code\public\materialsystem\imaterial.h" />
@@ -211,6 +242,7 @@
     <ClInclude Include="Code\public\mathlib\vector4d.h" />
     <ClInclude Include="Code\public\mathlib\vmatrix.h" />
     <ClInclude Include="Code\public\mathlib\vplane.h" />
+    <ClInclude Include="Code\public\networkstringtabledefs.h" />
     <ClInclude Include="Code\public\networksystem\inetworksystem.h" />
     <ClInclude Include="Code\public\networksystem\sm_protocol.h" />
     <ClInclude Include="Code\public\networkvar.h" />
@@ -236,6 +268,7 @@
     <ClInclude Include="Code\public\tier0\memdbgoff.h" />
     <ClInclude Include="Code\public\tier0\memdbgon.h" />
     <ClInclude Include="Code\public\tier0\platform.h" />
+    <ClInclude Include="Code\public\tier0\platwindow.h" />
     <ClInclude Include="Code\public\tier0\protected_things.h" />
     <ClInclude Include="Code\public\tier0\threadtools.h" />
     <ClInclude Include="Code\public\tier0\tslist.h" />
@@ -255,6 +288,7 @@
     <ClInclude Include="Code\public\tier1\checksum_crc.h" />
     <ClInclude Include="Code\public\tier1\checksum_md5.h" />
     <ClInclude Include="Code\public\tier1\convar.h" />
+    <ClInclude Include="Code\public\tier1\convar_serverbounded.h" />
     <ClInclude Include="Code\public\tier1\exprevaluator.h" />
     <ClInclude Include="Code\public\tier1\functors.h" />
     <ClInclude Include="Code\public\tier1\generichash.h" />
@@ -302,11 +336,22 @@
     <ClInclude Include="Code\public\trace.h" />
     <ClInclude Include="Code\public\unitlib\unitlib.h" />
     <ClInclude Include="Code\public\vcollide.h" />
+    <ClInclude Include="Code\public\vgui\IHTML.h" />
+    <ClInclude Include="Code\public\vgui\IImage.h" />
+    <ClInclude Include="Code\public\vgui\IPanel.h" />
+    <ClInclude Include="Code\public\vgui\ischemesurface.h" />
+    <ClInclude Include="Code\public\vgui\ISurface.h" />
+    <ClInclude Include="Code\public\vgui\IVguiMatInfo.h" />
+    <ClInclude Include="Code\public\vgui\IVguiMatInfoVar.h" />
+    <ClInclude Include="Code\public\vgui\KeyCode.h" />
+    <ClInclude Include="Code\public\vgui\MouseCode.h" />
+    <ClInclude Include="Code\public\vgui\VGUI.h" />
     <ClInclude Include="Code\public\vscript\ivscript.h" />
     <ClInclude Include="Code\public\vscript\vscript_templates.h" />
     <ClInclude Include="Code\public\vstdlib\random.h" />
     <ClInclude Include="Code\public\vstdlib\vstdlib.h" />
     <ClInclude Include="Code\public\vtf\vtf.h" />
+    <ClInclude Include="Code\public\worldsize.h" />
     <ClInclude Include="Code\public\zip_uncompressed.h" />
   </ItemGroup>
   <ItemGroup>
