--- a/Source/Framework/Framework.vcxproj
+++ b/Source/Framework/Framework.vcxproj
@@ -15,7 +15,7 @@
     <ProjectGuid>{E8104B83-4E8A-4A91-BB3A-C8B17ED45ACF}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Framework</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -142,6 +142,7 @@
     <None Include="Code\Development Environment\Assembly ON.inl" />
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Connectivity.inl" />
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Cryptography.inl" />
+    <None Include="Code\Source Development Kit\Application Programming Interfaces\Drawing.inl" />
     <None Include="Code\Source Development Kit\Toolkits\Graphical User Interface.inl" />
     <None Include="Code\Source Development Kit\Application Programming Interfaces\Utilities.inl" />
     <None Include="Code\Source Development Kit\Toolkits\Hooking.hpp" />
