--- a/Source/CSGOX/CSGOX.vcxproj.filters
+++ b/Source/CSGOX/CSGOX.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Code\Source Development Kit\Toolkits\Features\Miscellaneous\Automation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Code\Source Development Kit\Toolkits\Features\Combat\Trigger Automation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Framework\Precompile.hpp">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Code\Source Development Kit\Toolkits\Features\Miscellaneous\Automation.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Features\Combat\Trigger Automation.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
