--- a/Source/CSGO SDK/CSGO SDK.vcxproj
+++ b/Source/CSGO SDK/CSGO SDK.vcxproj
@@ -101,13 +101,27 @@
     <ClInclude Include="Code\engine\event_system.h" />
     <ClInclude Include="Code\engine\host.h" />
     <ClInclude Include="Code\engine\precache.h" />
+    <ClInclude Include="Code\game\client\animationlayer.h" />
+    <ClInclude Include="Code\game\client\bone_merge_cache.h" />
     <ClInclude Include="Code\game\client\cdll_client_int.h" />
     <ClInclude Include="Code\game\client\cdll_util.h" />
     <ClInclude Include="Code\game\client\cliententitylist.h" />
     <ClInclude Include="Code\game\client\clientleafsystem.h" />
     <ClInclude Include="Code\game\client\client_thinklist.h" />
+    <ClInclude Include="Code\game\client\colorcorrectionmgr.h" />
+    <ClInclude Include="Code\game\client\c_baseanimating.h" />
+    <ClInclude Include="Code\game\client\c_baseanimatingoverlay.h" />
+    <ClInclude Include="Code\game\client\c_basecombatcharacter.h" />
     <ClInclude Include="Code\game\client\c_baseentity.h" />
+    <ClInclude Include="Code\game\client\c_baseflex.h" />
+    <ClInclude Include="Code\game\client\c_baseplayer.h" />
+    <ClInclude Include="Code\game\client\c_colorcorrection.h" />
+    <ClInclude Include="Code\game\client\c_env_fog_controller.h" />
     <ClInclude Include="Code\game\client\c_pixel_visibility.h" />
+    <ClInclude Include="Code\game\client\c_playerlocaldata.h" />
+    <ClInclude Include="Code\game\client\c_postprocesscontroller.h" />
+    <ClInclude Include="Code\game\client\fx.h" />
+    <ClInclude Include="Code\game\client\fx_water.h" />
     <ClInclude Include="Code\game\client\glow_outline_effect.h" />
     <ClInclude Include="Code\game\client\iclassmap.h" />
     <ClInclude Include="Code\game\client\icliententityinternal.h" />
@@ -124,24 +138,41 @@
     <ClInclude Include="Code\game\client\particles_simple.h" />
     <ClInclude Include="Code\game\client\particle_iterators.h" />
     <ClInclude Include="Code\game\client\particle_util.h" />
+    <ClInclude Include="Code\game\client\ragdoll.h" />
     <ClInclude Include="Code\game\client\recvproxy.h" />
     <ClInclude Include="Code\game\client\timedevent.h" />
+    <ClInclude Include="Code\game\server\baseentity.h" />
+    <ClInclude Include="Code\game\server\entitylist.h" />
+    <ClInclude Include="Code\game\server\entityoutput.h" />
     <ClInclude Include="Code\game\server\sendproxy.h" />
+    <ClInclude Include="Code\game\server\ServerNetworkProperty.h" />
+    <ClInclude Include="Code\game\server\timedeventmgr.h" />
+    <ClInclude Include="Code\game\server\vscript_server.h" />
+    <ClInclude Include="Code\game\shared\ai_activity.h" />
+    <ClInclude Include="Code\game\shared\baseentity_shared.h" />
+    <ClInclude Include="Code\game\shared\baseplayer_shared.h" />
     <ClInclude Include="Code\game\shared\beam_flags.h" />
     <ClInclude Include="Code\game\shared\collisionproperty.h" />
     <ClInclude Include="Code\game\shared\cstrike\cs_weapon_parse.h" />
     <ClInclude Include="Code\game\shared\ehandle.h" />
     <ClInclude Include="Code\game\shared\entitylist_base.h" />
     <ClInclude Include="Code\game\shared\groundlink.h" />
+    <ClInclude Include="Code\game\shared\hintsystem.h" />
     <ClInclude Include="Code\game\shared\igamemovement.h" />
     <ClInclude Include="Code\game\shared\igamesystem.h" />
     <ClInclude Include="Code\game\shared\imovehelper.h" />
+    <ClInclude Include="Code\game\shared\iscenetokenprocessor.h" />
     <ClInclude Include="Code\game\shared\particle_parse.h" />
     <ClInclude Include="Code\game\shared\particle_property.h" />
     <ClInclude Include="Code\game\shared\particle_property_inlines.h" />
+    <ClInclude Include="Code\game\shared\playernet_vars.h" />
+    <ClInclude Include="Code\game\shared\postprocess_shared.h" />
     <ClInclude Include="Code\game\shared\predictableid.h" />
     <ClInclude Include="Code\game\shared\predictable_entity.h" />
     <ClInclude Include="Code\game\shared\predictioncopy.h" />
+    <ClInclude Include="Code\game\shared\ragdoll_shared.h" />
+    <ClInclude Include="Code\game\shared\sceneentity_shared.h" />
+    <ClInclude Include="Code\game\shared\sequence_transitioner.h" />
     <ClInclude Include="Code\game\shared\shareddefs.h" />
     <ClInclude Include="Code\game\shared\sharedvar.h" />
     <ClInclude Include="Code\game\shared\shared_classnames.h" />
@@ -159,6 +190,8 @@
     <ClInclude Include="Code\public\bitmap\imageformat.h" />
     <ClInclude Include="Code\public\bittools.h" />
     <ClInclude Include="Code\public\bitvec.h" />
+    <ClInclude Include="Code\public\bone_accessor.h" />
+    <ClInclude Include="Code\public\branchingsingleton.h" />
     <ClInclude Include="Code\public\bspfile.h" />
     <ClInclude Include="Code\public\bspflags.h" />
     <ClInclude Include="Code\public\cdll_int.h" />
@@ -225,6 +258,7 @@
     <ClInclude Include="Code\public\materialsystem\deformations.h" />
     <ClInclude Include="Code\public\materialsystem\IColorCorrection.h" />
     <ClInclude Include="Code\public\materialsystem\imaterial.h" />
+    <ClInclude Include="Code\public\materialsystem\imaterialproxy.h" />
     <ClInclude Include="Code\public\materialsystem\imaterialsystem.h" />
     <ClInclude Include="Code\public\materialsystem\imaterialsystemhardwareconfig.h" />
     <ClInclude Include="Code\public\materialsystem\imesh.h" />
@@ -243,14 +277,18 @@
     <ClInclude Include="Code\public\mathlib\vector4d.h" />
     <ClInclude Include="Code\public\mathlib\vmatrix.h" />
     <ClInclude Include="Code\public\mathlib\vplane.h" />
+    <ClInclude Include="Code\public\mouthinfo.h" />
     <ClInclude Include="Code\public\networkstringtabledefs.h" />
     <ClInclude Include="Code\public\networksystem\inetworksystem.h" />
     <ClInclude Include="Code\public\networksystem\sm_protocol.h" />
     <ClInclude Include="Code\public\networkvar.h" />
     <ClInclude Include="Code\public\particles\particles.h" />
+    <ClInclude Include="Code\public\playerstate.h" />
     <ClInclude Include="Code\public\raytrace.h" />
+    <ClInclude Include="Code\public\server_class.h" />
     <ClInclude Include="Code\public\shake.h" />
     <ClInclude Include="Code\public\smartptr.h" />
+    <ClInclude Include="Code\public\soundemittersystem\isoundemittersystembase.h" />
     <ClInclude Include="Code\public\soundflags.h" />
     <ClInclude Include="Code\public\string_t.h" />
     <ClInclude Include="Code\public\studio.h" />
@@ -318,6 +356,7 @@
     <ClInclude Include="Code\public\tier1\utlmap.h" />
     <ClInclude Include="Code\public\tier1\utlmemory.h" />
     <ClInclude Include="Code\public\tier1\utlobjectreference.h" />
+    <ClInclude Include="Code\public\tier1\utlpriorityqueue.h" />
     <ClInclude Include="Code\public\tier1\utlqueue.h" />
     <ClInclude Include="Code\public\tier1\utlrbtree.h" />
     <ClInclude Include="Code\public\tier1\utlsoacontainer.h" />
@@ -334,9 +373,11 @@
     <ClInclude Include="Code\public\tier2\tier2_logging.h" />
     <ClInclude Include="Code\public\tier3\tier3.h" />
     <ClInclude Include="Code\public\toolframework\itoolentity.h" />
+    <ClInclude Include="Code\public\toolframework\itoolframework.h" />
     <ClInclude Include="Code\public\trace.h" />
     <ClInclude Include="Code\public\unitlib\unitlib.h" />
     <ClInclude Include="Code\public\vcollide.h" />
+    <ClInclude Include="Code\public\vcollide_parse.h" />
     <ClInclude Include="Code\public\vgui\IHTML.h" />
     <ClInclude Include="Code\public\vgui\IImage.h" />
     <ClInclude Include="Code\public\vgui\IPanel.h" />
@@ -347,6 +388,7 @@
     <ClInclude Include="Code\public\vgui\KeyCode.h" />
     <ClInclude Include="Code\public\vgui\MouseCode.h" />
     <ClInclude Include="Code\public\vgui\VGUI.h" />
+    <ClInclude Include="Code\public\vphysics_interface.h" />
     <ClInclude Include="Code\public\vscript\ivscript.h" />
     <ClInclude Include="Code\public\vscript\vscript_templates.h" />
     <ClInclude Include="Code\public\vstdlib\random.h" />
